samples/_failures_safe/1761042043_a5e323_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14239eb2.c: In function ‘main’:
./samples/SAFE/__tmp_14239eb2.c:186:13: error: expected declaration or statement at end of input
  186 |             case STATE_START:
      |             ^~~~
./samples/SAFE/__tmp_14239eb2.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14239eb2.c:186:13: error: expected declaration or statement at end of input
